[Refactor] Reescrita das funções em Auth, Service e Ticket.
Refatoração das funções para aplicação do novo relacionamento entre classes.
